@@ -1,3 +1,9 @@
+2006-11-27  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>
+
+	* configure.ac, Makefile.am: 
+	Minor enhancements for build systems without bison and multi-processor
+	compiles.
+
 2006-11-24  Adrian Schuur, Viktor Mihajlovski
 
 	* args.c, cimXmlParser.c, cimXmlParser.h, classProvider.c, 
